# TDrone

./: .gitignore  DOCKER_README.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh  docker_run.sh  models  outpost_predictor_v4_log.csv  run_detector.sh  test_inference_speed.py
armor_detector_ros2/: CMakeLists.txt  package.xml
armor_detector_ros2/config/: camera_intrinsics.yaml  detector_config.yaml  outpost_predictor_v2_config.yaml  outpost_predictor_v3_config.yaml  outpost_predictor_v4_config.yaml
armor_detector_ros2/docker_backup/: docker-entrypoint.sh
armor_detector_ros2/include/core/: ArmorInferer.hpp  BBoxes.h  NumberClassifier.hpp  OpenSourceInferer.hpp  crc16.hpp  extended_kalman_filter.hpp  outpost_estimator.hpp  outpost_predictor_v2.hpp  outpost_predictor_v3.hpp  outpost_predictor_v4.hpp  pose_solver.hpp
armor_detector_ros2/include/driver/: DaHengCamera.h  driver.hpp
armor_detector_ros2/launch/: detector_launch.py  detector_opensource_launch.py  detector_zero_copy_launch.py  full_pipeline_launch.py  mock_hardware_launch.py  outpost_evaluation_launch.py  outpost_pipeline_launch.py  outpost_pipeline_v2_launch.py  outpost_pipeline_v3_launch.py  outpost_pipeline_v4_launch.py  real_hardware_launch.py  real_hardware_pipeline_launch.py  solver_debug_launch.py
armor_detector_ros2/models/: 0526.xml  classifier.xml
armor_detector_ros2/msg/: ArmorBBox.msg  ArmorBBoxArray.msg  ArmorPose.msg  ArmorPoseArray.msg  Command.msg  GimbalCommand.msg  OutpostAimResult.msg  OutpostState.msg  OutpostStateV2.msg  Point2f.msg
armor_detector_ros2/scripts/: README_DOCKER.md  calibrate_camera.py  calibrate_useage  camera_calibration.yaml  evaluate_prediction.py  test_gimbal_control.py  test_gimbal_control.sh  test_gimbal_control_docker.sh
armor_detector_ros2/scripts/web_visualizer/: start_dashboard_docker.sh  web_dashboard.py  web_dashboard.py.backup_1769795411  web_dashboard.py.old  zstart_dashboard.sh
armor_detector_ros2/src/components/: detector_component.cpp  video_publisher_component.cpp  visualizer_component.cpp
armor_detector_ros2/src/core/: ArmorInferer.cpp  NumberClassifier.cpp  OpenSourceInferer.cpp  crc16.cpp  extended_kalman_filter.cpp  outpost_estimator.cpp  outpost_predictor_v2.cpp  outpost_predictor_v3.cpp  outpost_predictor_v4.cpp  pose_solver.cpp
armor_detector_ros2/src/driver/: DaHengCamera.cpp
armor_detector_ros2/src/mock/: imu_file_publisher_node.cpp  mock_camera_node.cpp  mock_cboard_node.cpp  mock_imu_node.cpp
armor_detector_ros2/src/nodes/: aiming_node.cpp  detector_node.cpp  detector_opensource_node.cpp  detector_opensource_node.cpp.origin  gimbal_control_node.cpp  outpost_predictor_node.cpp  outpost_predictor_node_v2.cpp  outpost_predictor_node_v3.cpp  outpost_predictor_node_v4.cpp  real_hardware_publisher_node.cpp  solver_node.cpp  video_publisher_node.cpp
armor_detector_ros2/src/visualize/: solver_visualizer_node.cpp  visualizer_node.cpp  visualizer_node_v2.cpp  visualizer_node_v3.cpp  visualizer_node_v4.cpp
armor_detector_ros2/test/: test_crc16.cpp  test_ekf.cpp  test_environment.cpp  test_mock_camera.cpp  test_mock_cboard.cpp  test_mock_imu.cpp  test_outpost_estimator.cpp  test_outpost_predictor_node.cpp  test_pose_solver.cpp  test_solver_node.cpp
armor_detector_ros2/test/test_data/: test_camera_intrinsics.yaml  test_camera_intrinsics_alt.yaml  test_camera_intrinsics_invalid.yaml
armor_detector_ros2/verify/: CMakeLists.txt  run_verify.sh  verify_pnp.cpp
scripts/: verify_environment.sh
videos/: k1.txt  r1.txt
